Remove build artifacts and clean target directory from branch history